# sdl2pp_imgui_template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
sources/: CMakeLists.txt  application.cpp  application.hpp  demo_application.cpp  demo_application.hpp  main.cpp
